Minor adjustments that were made a long time ago and not committed.